--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,10 @@
   </head>
   <body>
     <form id="input-form">
-      <input type="text" id="input-text" placeholder="message..." />
+      <input type="text" name="message" placeholder="message..." />
       <button type="submit">send</button>
     </form>
+    <button id="share-location">Share Location</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
   </body>
