--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
 
     <title>Document</title>
   </head>
   <body>
-    <form id="input-form">
-      <input type="text" name="message" placeholder="message..." />
-      <button type="submit">send</button>
-    </form>
-    <button id="share-location">Share Location</button>
+    <div class="row">
+      <form class="col s12" id="input-form">
+        <div class="input-field col s6">
+          <input class="validate" id="message" type="text" name="message" />
+          <label for="message">Message</label>
+        </div>
+        <button type="submit" id="submit-btn" class="btn">
+          send
+        </button>
+      </form>
+      <button id="share-location" class="btn">Share Location</button>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
     <script src="/js/chat.js"></script>
   </body>
 </html>
