added readme, removed unused functionality

--- a/public/index.html
+++ b/public/index.html
@@ -12,21 +12,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="row">
-      <form class="col s12" id="input-form">
-        <div class="input-field col s6">
-          <input class="validate" id="message" type="text" name="message" />
-          <label for="message">Message</label>
-        </div>
-        <button type="submit" id="submit-btn" class="btn">
-          send
-        </button>
-      </form>
-      <button id="share-location" class="btn">Share Location</button>
+    <div class="row container">
+      <h1>Well Howdy!</h1>
+      <p>Looks like you you found my sketch server. Not much to see here!</p>
     </div>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-    <script src="/js/chat.js"></script>
-  </body>
+    </body>
 </html>
